fuzzer/CookiecutterCLIExpandedParser.py
# Generated from /media/steven/MaD/projects/cookiecutter/fuzzer/CookiecutterCLIExpanded.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CookiecutterCLIExpandedParser ( Parser ):

    grammarFileName = "CookiecutterCLIExpanded.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-l'", "'--no-input'", "'--replay --replay-file tests/test-replay/valid_replay.json'", 
                     "'--default-config'", "'--config-file tests/test-config/valid-config.yaml'", 
                     "'--config-file tests/test-config/valid-partial-config.yaml'", 
                     "'--overwrite-if-exists'", "'--skip-if-file-exists'", 
                     "'--keep-project-on-failure'", "'-v'", "'--accept-hooks=yes'", 
                     "'--accept-hooks=no'", "'tests/fake-repo-pre/'", "'tests/fake-repo-tmpl/'", 
                     "'tests/fake-repo-dict/'", "'tests/fake-nested-templates/'", 
                     "'tests/fake-repo-replay/'", "'repo_name=fuzz-project'", 
                     "'project_name=Fuzz_Project'", "'project_short_description=Expanded_fuzzing'", 
                     "'full_name=Fuzz_User'", "'email=fuzz@example.com'", 
                     "'github_username=fuzz_user'", "' '" ]

    symbolicNames = [ "<INVALID>", "LIST_INSTALLED", "NO_INPUT", "REPLAY", 
                      "DEFAULT_CONFIG", "VALID_CONFIG", "PARTIAL_CONFIG", 
                      "OVERWRITE", "SKIP_ARG", "KEEP", "VERBOSE", "ACCEPT_YES", 
                      "ACCEPT_NO", "FAKE_REPO_PRE", "FAKE_REPO_TMPL", "FAKE_REPO_DICT", 
                      "FAKE_NESTED", "FAKE_REPO_REPLAY", "EXTRA_REPO_NAME", 
                      "EXTRA_PROJECT_NAME", "EXTRA_SHORT_DESC", "EXTRA_FULL_NAME", 
                      "EXTRA_EMAIL", "EXTRA_GITHUB", "SP", "WS" ]

    RULE_start = 0
    RULE_command = 1
    RULE_list_installed_command = 2
    RULE_render_command = 3
    RULE_nested_command = 4
    RULE_replay_command = 5
    RULE_list_tail = 6
    RULE_render_tail = 7
    RULE_replay_tail = 8
    RULE_list_item = 9
    RULE_render_item = 10
    RULE_replay_item = 11
    RULE_template = 12
    RULE_nested_template = 13
    RULE_replay_template = 14

    ruleNames =  [ "start", "command", "list_installed_command", "render_command", 
                   "nested_command", "replay_command", "list_tail", "render_tail", 
                   "replay_tail", "list_item", "render_item", "replay_item", 
                   "template", "nested_template", "replay_template" ]

    EOF = Token.EOF
    LIST_INSTALLED=1
    NO_INPUT=2
    REPLAY=3
    DEFAULT_CONFIG=4
    VALID_CONFIG=5
    PARTIAL_CONFIG=6
    OVERWRITE=7
    SKIP_ARG=8
    KEEP=9
    VERBOSE=10
    ACCEPT_YES=11
    ACCEPT_NO=12
    FAKE_REPO_PRE=13
    FAKE_REPO_TMPL=14
    FAKE_REPO_DICT=15
    FAKE_NESTED=16
    FAKE_REPO_REPLAY=17
    EXTRA_REPO_NAME=18
    EXTRA_PROJECT_NAME=19
    EXTRA_SHORT_DESC=20
    EXTRA_FULL_NAME=21
    EXTRA_EMAIL=22
    EXTRA_GITHUB=23
    SP=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.CommandContext,0)


        def EOF(self):
            return self.getToken(CookiecutterCLIExpandedParser.EOF, 0)

        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CookiecutterCLIExpandedParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.command()
            self.state = 31
            self.match(CookiecutterCLIExpandedParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_installed_command(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.List_installed_commandContext,0)


        def render_command(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Render_commandContext,0)


        def nested_command(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Nested_commandContext,0)


        def replay_command(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Replay_commandContext,0)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = CookiecutterCLIExpandedParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.list_installed_command()
                pass
            elif token in [13, 14, 15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.render_command()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.nested_command()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.replay_command()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_installed_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIST_INSTALLED(self):
            return self.getToken(CookiecutterCLIExpandedParser.LIST_INSTALLED, 0)

        def list_tail(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.List_tailContext,0)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_list_installed_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_installed_command" ):
                listener.enterList_installed_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_installed_command" ):
                listener.exitList_installed_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_installed_command" ):
                return visitor.visitList_installed_command(self)
            else:
                return visitor.visitChildren(self)




    def list_installed_command(self):

        localctx = CookiecutterCLIExpandedParser.List_installed_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_installed_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(CookiecutterCLIExpandedParser.LIST_INSTALLED)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 40
                self.list_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Render_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.TemplateContext,0)


        def SP(self):
            return self.getToken(CookiecutterCLIExpandedParser.SP, 0)

        def NO_INPUT(self):
            return self.getToken(CookiecutterCLIExpandedParser.NO_INPUT, 0)

        def render_tail(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Render_tailContext,0)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_render_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRender_command" ):
                listener.enterRender_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRender_command" ):
                listener.exitRender_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRender_command" ):
                return visitor.visitRender_command(self)
            else:
                return visitor.visitChildren(self)




    def render_command(self):

        localctx = CookiecutterCLIExpandedParser.Render_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_render_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.template()
            self.state = 44
            self.match(CookiecutterCLIExpandedParser.SP)
            self.state = 45
            self.match(CookiecutterCLIExpandedParser.NO_INPUT)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 46
                self.render_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nested_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nested_template(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Nested_templateContext,0)


        def SP(self):
            return self.getToken(CookiecutterCLIExpandedParser.SP, 0)

        def NO_INPUT(self):
            return self.getToken(CookiecutterCLIExpandedParser.NO_INPUT, 0)

        def render_tail(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Render_tailContext,0)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_nested_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNested_command" ):
                listener.enterNested_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNested_command" ):
                listener.exitNested_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNested_command" ):
                return visitor.visitNested_command(self)
            else:
                return visitor.visitChildren(self)




    def nested_command(self):

        localctx = CookiecutterCLIExpandedParser.Nested_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nested_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.nested_template()
            self.state = 50
            self.match(CookiecutterCLIExpandedParser.SP)
            self.state = 51
            self.match(CookiecutterCLIExpandedParser.NO_INPUT)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 52
                self.render_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Replay_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def replay_template(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Replay_templateContext,0)


        def SP(self):
            return self.getToken(CookiecutterCLIExpandedParser.SP, 0)

        def REPLAY(self):
            return self.getToken(CookiecutterCLIExpandedParser.REPLAY, 0)

        def replay_tail(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Replay_tailContext,0)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_replay_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplay_command" ):
                listener.enterReplay_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplay_command" ):
                listener.exitReplay_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReplay_command" ):
                return visitor.visitReplay_command(self)
            else:
                return visitor.visitChildren(self)




    def replay_command(self):

        localctx = CookiecutterCLIExpandedParser.Replay_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_replay_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.replay_template()
            self.state = 56
            self.match(CookiecutterCLIExpandedParser.SP)
            self.state = 57
            self.match(CookiecutterCLIExpandedParser.REPLAY)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 58
                self.replay_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SP(self):
            return self.getToken(CookiecutterCLIExpandedParser.SP, 0)

        def list_item(self):
            return self.getTypedRuleContext(CookiecutterCLIExpandedParser.List_itemContext,0)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_list_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_tail" ):
                listener.enterList_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_tail" ):
                listener.exitList_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_tail" ):
                return visitor.visitList_tail(self)
            else:
                return visitor.visitChildren(self)




    def list_tail(self):

        localctx = CookiecutterCLIExpandedParser.List_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_tail)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(CookiecutterCLIExpandedParser.SP)
            self.state = 62
            self.list_item()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Render_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterCLIExpandedParser.SP)
            else:
                return self.getToken(CookiecutterCLIExpandedParser.SP, i)

        def render_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterCLIExpandedParser.Render_itemContext)
            else:
                return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Render_itemContext,i)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_render_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRender_tail" ):
                listener.enterRender_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRender_tail" ):
                listener.exitRender_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRender_tail" ):
                return visitor.visitRender_tail(self)
            else:
                return visitor.visitChildren(self)




    def render_tail(self):

        localctx = CookiecutterCLIExpandedParser.Render_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_render_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.match(CookiecutterCLIExpandedParser.SP)
                self.state = 65
                self.render_item()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==24):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Replay_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterCLIExpandedParser.SP)
            else:
                return self.getToken(CookiecutterCLIExpandedParser.SP, i)

        def replay_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterCLIExpandedParser.Replay_itemContext)
            else:
                return self.getTypedRuleContext(CookiecutterCLIExpandedParser.Replay_itemContext,i)


        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_replay_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplay_tail" ):
                listener.enterReplay_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplay_tail" ):
                listener.exitReplay_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReplay_tail" ):
                return visitor.visitReplay_tail(self)
            else:
                return visitor.visitChildren(self)




    def replay_tail(self):

        localctx = CookiecutterCLIExpandedParser.Replay_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_replay_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.match(CookiecutterCLIExpandedParser.SP)
                self.state = 71
                self.replay_item()
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==24):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.DEFAULT_CONFIG, 0)

        def VALID_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.VALID_CONFIG, 0)

        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_list_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_item" ):
                listener.enterList_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_item" ):
                listener.exitList_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_item" ):
                return visitor.visitList_item(self)
            else:
                return visitor.visitChildren(self)




    def list_item(self):

        localctx = CookiecutterCLIExpandedParser.List_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Render_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.DEFAULT_CONFIG, 0)

        def VALID_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.VALID_CONFIG, 0)

        def PARTIAL_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.PARTIAL_CONFIG, 0)

        def OVERWRITE(self):
            return self.getToken(CookiecutterCLIExpandedParser.OVERWRITE, 0)

        def SKIP_ARG(self):
            return self.getToken(CookiecutterCLIExpandedParser.SKIP_ARG, 0)

        def KEEP(self):
            return self.getToken(CookiecutterCLIExpandedParser.KEEP, 0)

        def VERBOSE(self):
            return self.getToken(CookiecutterCLIExpandedParser.VERBOSE, 0)

        def ACCEPT_YES(self):
            return self.getToken(CookiecutterCLIExpandedParser.ACCEPT_YES, 0)

        def ACCEPT_NO(self):
            return self.getToken(CookiecutterCLIExpandedParser.ACCEPT_NO, 0)

        def EXTRA_REPO_NAME(self):
            return self.getToken(CookiecutterCLIExpandedParser.EXTRA_REPO_NAME, 0)

        def EXTRA_PROJECT_NAME(self):
            return self.getToken(CookiecutterCLIExpandedParser.EXTRA_PROJECT_NAME, 0)

        def EXTRA_SHORT_DESC(self):
            return self.getToken(CookiecutterCLIExpandedParser.EXTRA_SHORT_DESC, 0)

        def EXTRA_FULL_NAME(self):
            return self.getToken(CookiecutterCLIExpandedParser.EXTRA_FULL_NAME, 0)

        def EXTRA_EMAIL(self):
            return self.getToken(CookiecutterCLIExpandedParser.EXTRA_EMAIL, 0)

        def EXTRA_GITHUB(self):
            return self.getToken(CookiecutterCLIExpandedParser.EXTRA_GITHUB, 0)

        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_render_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRender_item" ):
                listener.enterRender_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRender_item" ):
                listener.exitRender_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRender_item" ):
                return visitor.visitRender_item(self)
            else:
                return visitor.visitChildren(self)




    def render_item(self):

        localctx = CookiecutterCLIExpandedParser.Render_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_render_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16523248) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Replay_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALID_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.VALID_CONFIG, 0)

        def PARTIAL_CONFIG(self):
            return self.getToken(CookiecutterCLIExpandedParser.PARTIAL_CONFIG, 0)

        def OVERWRITE(self):
            return self.getToken(CookiecutterCLIExpandedParser.OVERWRITE, 0)

        def SKIP_ARG(self):
            return self.getToken(CookiecutterCLIExpandedParser.SKIP_ARG, 0)

        def KEEP(self):
            return self.getToken(CookiecutterCLIExpandedParser.KEEP, 0)

        def VERBOSE(self):
            return self.getToken(CookiecutterCLIExpandedParser.VERBOSE, 0)

        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_replay_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplay_item" ):
                listener.enterReplay_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplay_item" ):
                listener.exitReplay_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReplay_item" ):
                return visitor.visitReplay_item(self)
            else:
                return visitor.visitChildren(self)




    def replay_item(self):

        localctx = CookiecutterCLIExpandedParser.Replay_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_replay_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FAKE_REPO_PRE(self):
            return self.getToken(CookiecutterCLIExpandedParser.FAKE_REPO_PRE, 0)

        def FAKE_REPO_TMPL(self):
            return self.getToken(CookiecutterCLIExpandedParser.FAKE_REPO_TMPL, 0)

        def FAKE_REPO_DICT(self):
            return self.getToken(CookiecutterCLIExpandedParser.FAKE_REPO_DICT, 0)

        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_template

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate" ):
                listener.enterTemplate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate" ):
                listener.exitTemplate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate" ):
                return visitor.visitTemplate(self)
            else:
                return visitor.visitChildren(self)




    def template(self):

        localctx = CookiecutterCLIExpandedParser.TemplateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_template)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nested_templateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FAKE_NESTED(self):
            return self.getToken(CookiecutterCLIExpandedParser.FAKE_NESTED, 0)

        def getRuleIndex(self):
            return CookiecutterCLIExpandedParser.RULE_nested_template

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNested_template" ):
                listener.enterNested_template(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNested_template" ):
                listener.exitNested_template(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNested_template" ):
                return visitor.visitNested_template(self)
            else:
                return visitor.visitChildren(self)




    def nested_template(self):
